--- a/static/style.css
+++ b/static/style.css
@@ -129,3 +129,6 @@ body, html {
         margin-bottom: 15px !important;
     }
 }
+.msg_cotainer, .msg_cotainer_send {
+    white-space: pre-wrap; /* Allows for the preservation of whitespace and line breaks */
+}
